--- a/example/index.html
+++ b/example/index.html
@@ -153,7 +153,8 @@
     $(document).ready(function () {
         // init responsive images
         $('.picture').responsiveImage({
-            resizeEvent: 'debouncedwidth'
+            resizeEvent: 'debouncedwidth',
+            preload: true
         });
 
         // load helpers
