--- a/old/example/index.html
+++ b/old/example/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Responsive Image Examples</title>
 
     <!-- Bootstrap -->
@@ -20,12 +22,12 @@
     <![endif]-->
 </head>
 <body>
+
 <!-- Fixed navbar -->
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">Responsive Images - Viewport: <span id="viewport"></span>px | DPR:
-                @<span id="dpr"></span>x</a>
+            <a class="navbar-brand" href="index.html">Responsive Images - Viewport: <span id="viewport"></span>px | DPR: @<span id="dpr"></span>x</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -49,31 +51,22 @@
             <h4>MinWidth based on Viewport</h4>
             <span class="picture" data-alt="foo" data-title="bar" data-class="img-responsive">
                 <span data-src="http://dummyimage.com/400x200/2849ad/ffffff&text=400+x+200+@1x"></span>
-                <span data-src="http://dummyimage.com/600x300/2849ad/ffffff&text=600+x+300+@1x"
-                      data-min-width="400"></span>
-                <span data-src="http://dummyimage.com/800x400/2849ad/ffffff&text=800+x+400+@1x"
-                      data-min-width="600"></span>
-                <span data-src="http://dummyimage.com/1000x500/2849ad/ffffff&text=1000+x+500+@1x"
-                      data-min-width="800"></span>
-                <span data-src="http://dummyimage.com/1200x600/2849ad/ffffff&text=1200+x+600+@1x"
-                      data-min-width="1000"></span>
+                <span data-src="http://dummyimage.com/600x300/2849ad/ffffff&text=600+x+300+@1x" data-min-width="400"></span>
+                <span data-src="http://dummyimage.com/800x400/2849ad/ffffff&text=800+x+400+@1x" data-min-width="600"></span>
+                <span data-src="http://dummyimage.com/1000x500/2849ad/ffffff&text=1000+x+500+@1x" data-min-width="800"></span>
+                <span data-src="http://dummyimage.com/1200x600/2849ad/ffffff&text=1200+x+600+@1x" data-min-width="1000"></span>
             </span>
         </div>
 
         <div class="col-xs-6">
             <h4>MinWidth based on Container</h4>
             <figure>
-                <span class="picture" data-container="figure" data-alt="foo" data-title="bar"
-                      data-class="img-responsive">
+                <span class="picture" data-container="figure" data-alt="foo" data-title="bar" data-class="img-responsive">
                     <span data-src="http://dummyimage.com/400x200/2849ad/ffffff&text=400+x+200+@1x"></span>
-                    <span data-src="http://dummyimage.com/600x300/2849ad/ffffff&text=600+x+300+@1x"
-                          data-min-width="400"></span>
-                    <span data-src="http://dummyimage.com/800x400/2849ad/ffffff&text=800+x+400+@1x"
-                          data-min-width="600"></span>
-                    <span data-src="http://dummyimage.com/1000x500/2849ad/ffffff&text=1000+x+500+@1x"
-                          data-min-width="800"></span>
-                    <span data-src="http://dummyimage.com/1200x600/2849ad/ffffff&text=1200+x+600+@1x"
-                          data-min-width="1000"></span>
+                    <span data-src="http://dummyimage.com/600x300/2849ad/ffffff&text=600+x+300+@1x" data-min-width="400"></span>
+                    <span data-src="http://dummyimage.com/800x400/2849ad/ffffff&text=800+x+400+@1x" data-min-width="600"></span>
+                    <span data-src="http://dummyimage.com/1000x500/2849ad/ffffff&text=1000+x+500+@1x" data-min-width="800"></span>
+                    <span data-src="http://dummyimage.com/1200x600/2849ad/ffffff&text=1200+x+600+@1x" data-min-width="1000"></span>
                 </span>
             </figure>
         </div>
@@ -83,13 +76,10 @@
         <div class="col-xs-12">
             <p>
                 <br>These images support 5 different states. The only difference is the width calculation.<br>
-                The left image is based on the windows viewport, the right is based on its surrounding &lt;figure&gt;
-                tag.<br>
-                Breakpoints start from 0px to 399px, 400px to 599px, 600px to 799px, 800px to 999px and large image
-                above 1000px.
+                The left image is based on the windows viewport, the right is based on its surrounding &lt;figure&gt; tag.<br>
+                Breakpoints start from 0px to 399px, 400px to 599px, 600px to 799px, 800px to 999px and large image above 1000px.
             </p>
-            <p>This code is used for both images. Only the <strong>data-container</strong> attribute is set for the
-                right image.</p>
+            <p>This code is used for both images. Only the <strong>data-container</strong> attribute is set for the right image.</p>
             <pre class="small">
 &lt;span class=&quot;picture&quot; data-container=&quot;figure&quot; data-alt=&quot;foo&quot; data-title=&quot;bar&quot; data-class=&quot;img-responsive&quot;&gt;
     &lt;span data-src=&quot;400x200.jpg&quot;&gt;&lt;/span&gt;
@@ -105,19 +95,15 @@
         <div class="col-xs-6">
             <h4>With Retina @2x Support and source prefix set</h4>
             <figure>
-                <span class="picture" data-container="figure" data-alt="foo" data-title="bar"
-                      data-class="img-responsive" data-source-prefix="http://dummyimage.com/">
+                <span class="picture" data-container="figure" data-alt="foo" data-title="bar" data-class="img-responsive" data-source-prefix="http://dummyimage.com/">
                     <span data-src="400x200/2849ad/ffffff&text=400+x+200+@1x"></span>
                     <span data-src="800x400/2849ad/ffffff&text=400+x+200+@2x" data-min-dpr="2"></span>
                     <span data-src="600x300/2849ad/ffffff&text=600+x+300+@1x" data-min-width="400"></span>
-                    <span data-src="1200x600/2849ad/ffffff&text=600+x+300+@2x" data-min-dpr="2"
-                          data-min-width="400"></span>
+                    <span data-src="1200x600/2849ad/ffffff&text=600+x+300+@2x" data-min-dpr="2" data-min-width="400"></span>
                     <span data-src="800x400/2849ad/ffffff&text=800+x+400+@1x" data-min-width="600"></span>
-                    <span data-src="1600x800/2849ad/ffffff&text=800+x+400+@2x" data-min-dpr="2"
-                          data-min-width="600"></span>
+                    <span data-src="1600x800/2849ad/ffffff&text=800+x+400+@2x" data-min-dpr="2" data-min-width="600"></span>
                     <span data-src="1000x500/2849ad/ffffff&text=1000+x+500+@1x" data-min-width="800"></span>
-                    <span data-src="2000x1000/2849ad/ffffff&text=1000+x+500+@2x" data-min-dpr="2"
-                          data-min-width="800"></span>
+                    <span data-src="2000x1000/2849ad/ffffff&text=1000+x+500+@2x" data-min-dpr="2" data-min-width="800"></span>
                 </span>
             </figure>
         </div>
@@ -125,43 +111,40 @@
         <div class="col-xs-6">
             <h4>Unsorted sources (same as retina demo)</h4>
             <figure>
-                <span class="picture" data-container="figure" data-alt="foo" data-title="bar"
-                      data-class="img-responsive">
-                    <span data-src="http://dummyimage.com/2000x1000/2849ad/ffffff&text=1000+x+500+@2x" data-min-dpr="2"
-                          data-min-width="800"></span>
+                <span class="picture" data-container="figure" data-alt="foo" data-title="bar" data-class="img-responsive">
+                    <span data-src="http://dummyimage.com/2000x1000/2849ad/ffffff&text=1000+x+500+@2x" data-min-dpr="2" data-min-width="800"></span>
                     <span data-src="http://dummyimage.com/400x200/2849ad/ffffff&text=400+x+200+@1x"></span>
-                    <span data-src="http://dummyimage.com/800x400/2849ad/ffffff&text=800+x+400+@1x"
-                          data-min-width="600"></span>
-                    <span data-src="http://dummyimage.com/1600x800/2849ad/ffffff&text=800+x+400+@2x" data-min-dpr="2"
-                          data-min-width="600"></span>
-                    <span data-src="http://dummyimage.com/1000x500/2849ad/ffffff&text=1000+x+500+@1x"
-                          data-min-width="800"></span>
-                    <span data-src="http://dummyimage.com/800x400/2849ad/ffffff&text=400+x+200+@2x"
-                          data-min-dpr="2"></span>
-                    <span data-src="http://dummyimage.com/600x300/2849ad/ffffff&text=600+x+300+@1x"
-                          data-min-width="400"></span>
-                    <span data-src="http://dummyimage.com/1200x600/2849ad/ffffff&text=600+x+300+@2x" data-min-dpr="2"
-                          data-min-width="400"></span>
+                    <span data-src="http://dummyimage.com/800x400/2849ad/ffffff&text=800+x+400+@1x" data-min-width="600"></span>
+                    <span data-src="http://dummyimage.com/1600x800/2849ad/ffffff&text=800+x+400+@2x" data-min-dpr="2" data-min-width="600"></span>
+                    <span data-src="http://dummyimage.com/1000x500/2849ad/ffffff&text=1000+x+500+@1x" data-min-width="800"></span>
+                    <span data-src="http://dummyimage.com/800x400/2849ad/ffffff&text=400+x+200+@2x" data-min-dpr="2"></span>
+                    <span data-src="http://dummyimage.com/600x300/2849ad/ffffff&text=600+x+300+@1x" data-min-width="400"></span>
+                    <span data-src="http://dummyimage.com/1200x600/2849ad/ffffff&text=600+x+300+@2x" data-min-dpr="2" data-min-width="400"></span>
                 </span>
             </figure>
         </div>
     </div>
 
 </div>
+<!-- /container -->
 
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src="../dist/jquery.responsiveImage.js"></script>
+<script src="js/jquery-1.7.2.min.js"></script>
+<script src="js/jquery.debouncedwidth.js"></script>
+<script src="../src/jquery.responsiveImage.js"></script>
 <script type="text/javascript">
     var helper = {
         getDpr: function () {
             if (window.screen.systemXDPI !== undefined && window.screen.logicalXDPI !== undefined && window.screen.systemXDPI > window.screen.logicalXDPI) {
                 return window.screen.systemXDPI / window.screen.logicalXDPI;
             }
+
             if (window.devicePixelRatio !== undefined) {
                 return window.devicePixelRatio;
             }
+
             return 1;
         },
+
         getWidth: function () {
             return window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
         }
@@ -172,7 +155,7 @@
         $('.picture').responsiveImage({
             resizeEvent: 'debouncedwidth',
             preload: true
-        }).trigger('init.responsiveImage');
+        });
 
         // load helpers
         $('#viewport').html(helper.getWidth());
@@ -180,16 +163,6 @@
         $(window).on('resize', function () {
             $('#viewport').html(helper.getWidth());
         });
-    });
-</script>
-<script>
-    $(document).ready(function () {
-
-        $('.demo').boilerplate().trigger('init.boilerplate');
-
-        // Destroy plugin
-        // $('.demo').trigger('destroy.boilerplate');
-
     });
 </script>
 </body>
